cleaned up code/added notebook descriptions

--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/0_0_data_quality_check.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/0_0_data_quality_check.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dieses Notebook führt die Datenqualitätchecks für den initialen Datensatz."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Imports & Downloads"
    ]
   },
@@ -87,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Datenexploration"
+    "### 1. Datenexploration"
    ]
   },
   {
