--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_1_clean_data_check_methods.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_1_clean_data_check_methods.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dieses Notebook überprüft die Cleaning-Funktionen und dokumentiert deren Ergebnisse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Imports & Downloads"
    ]
   },
