--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_2_clean_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_2_clean_data.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dieses Notebook dokumentiert die ersten Schritte für die Bereinigung des ursprünglichen Datensatzes im Rahmen der Datenvorverarbeitung."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
