--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Das Verzeichnis festlegen"
+    "## Dieses Notebook enthält die Schritte der explorativen Datenanalyse und eine erste Untersuchung des initialen Datensatzes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Das Verzeichnis festlegen"
    ]
   },
   {
@@ -38,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Imports & Downloads"
+    "##### Imports & Downloads"
    ]
   },
   {
@@ -140,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Beladung der Daten"
+    "#### Beladung der Daten"
    ]
   },
   {
@@ -838,7 +852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Anzahl von Mentions und Hashtags pro Tweet"
+    "#### Anzahl von Mentions und Hashtags pro Tweet"
    ]
   },
   {
@@ -2654,7 +2668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Überprüfung der Datenqualität: Die Tweets mit uplausibeln Labels:"
+    "#### Überprüfung der Datenqualität: Die Tweets mit uplausibeln Labels:"
    ]
   },
   {
