--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data_new_datasets.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data_new_datasets.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dieses Notebook enthält die Schritte der explorativen Datenanalyse und eine erste Untersuchung des Datensatzes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Das Verzeichnis festlegen"
    ]
   },
