--- a/src/1b. Vectorization/nasiba/1_3_vectorize_data.ipynb
+++ b/src/1b. Vectorization/nasiba/1_3_vectorize_data.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In diesem Notebook werden die erstellten Vektorisierungfunktionen getestet und ihre Ergebnisse analysiert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -362,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vergleiche 4 Methoden"
+    "#### Vergleiche 4 Methoden"
    ]
   },
   {
