--- a/src/3. Deep Learning Approach/nasiba/Training/Manuel_Labeln/Predicten/RNN-LSTM_mixed_dataset_rnn_predict.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/Training/Manuel_Labeln/Predicten/RNN-LSTM_mixed_dataset_rnn_predict.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dieses Notebook beinhaltet die Prediction-Schritte der finalen LSTM-Modelle und vergleicht die Ergebnisse mit manuell annotierten Datensätzen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
