--- a/src/3. Deep Learning Approach/nasiba/Training/Phase_1/RNN-LSTM_Phase1_Vector_Word2Wec.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/Training/Phase_1/RNN-LSTM_Phase1_Vector_Word2Wec.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dieses Notebook umfasst die Trainingsschritte der Phase 1 der LSTM-Modelle mit Word2Vec-Vektorisierung und dokumentiert die Ergebnisse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
