--- a/src/3. Deep Learning Approach/nasiba/Training/Phase_2/RNN-LSTM_Phase2_Mixed_Fasttext.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/Training/Phase_2/RNN-LSTM_Phase2_Mixed_Fasttext.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dieses Notebook umfasst die Trainingsschritte der Phase 2 der LSTM-Modelle mit Fasttext-Vektorisierung und dokumentiert die Ergebnisse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codeabschnitt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
